--- a/index.html
+++ b/index.html
@@ -1,17 +1,55 @@
 <!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Lamborghini</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Forum&family=Inter:wght@400;700&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <nav class="nav">
+          <ul class="menu-list menu-left">
+            <li class="menu-item">
+              <a class="menu-link" href="#">Race info</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#">Track</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#">Lamborghini Super trofeo</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#">News</a>
+            </li>
+          </ul>
+          <a class="logo" href="#">
+            <img class="logo-img" src="images/logo.svg" alt="Lambo-logo" />
+          </a>
+          <ul class="menu-list menu-right">
+            <li class="menu-item">
+              <a class="menu-link" href="#">Buy tickets</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#">Watch online</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
-
-
-  <script src="js/main.js"></script>
-</body>
+    <script src="js/main.js"></script>
+  </body>
 </html>
