--- a/index.html
+++ b/index.html
@@ -49,6 +49,22 @@
         </nav>
       </div>
     </header>
+    <main class="main">
+      <section class="promo">
+        <div class="container">
+          <div class="promo__inner">
+            <h1 class="tittle">LAMBORGHINI SUPER TROFEO</h1>
+            <h2 class="subtitle">Grand Final 2023
+              <span>3-6 november</span>
+            </h2>
+            <p class="promo__text">Portimao Circuit, Portugal</p>
+            <a class="promo__arrow" href="">
+              <img class="promo__img" src="images/arrow.svg" alt="">
+            </a>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <script src="js/main.js"></script>
   </body>
