feat: add markup and styles for info, track sections acc to 2-nd video lesson

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="big-container">
         <nav class="nav">
           <ul class="menu-list menu-left">
             <li class="menu-item">
@@ -51,16 +51,138 @@
     </header>
     <main class="main">
       <section class="promo">
-        <div class="container">
+        <div class="big-container">
           <div class="promo__inner">
             <h1 class="tittle">LAMBORGHINI SUPER TROFEO</h1>
-            <h2 class="subtitle">Grand Final 2023
+            <h2 class="subtitle">
+              Grand Final 2023
               <span>3-6 november</span>
             </h2>
             <p class="promo__text">Portimao Circuit, Portugal</p>
             <a class="promo__arrow" href="">
-              <img class="promo__img" src="images/arrow.svg" alt="">
+              <img class="promo__img" src="images/arrow.svg" alt="" />
             </a>
+          </div>
+        </div>
+      </section>
+      <section class="info">
+        <div class="container">
+          <div class="info__part info__part--first">
+            <h3 class="info__tittle">SUPER TROPHY WORLD FINAL</h3>
+            <div class="info__part-textbox">
+              <p class="info__text">
+                The Lamborghini World Final has concluded every Super Trofeo
+                season since 2013. Each year, riders from all continental
+                championships go to different tracks and take part in two
+                50-minute sprint races, where the overall winner is determined.
+                as the world champion Lamborghini. The Lamborghini World Final
+                is not only the biggest race weekend of the year, but also a
+                real motorsport festival that attracts fans from all over the
+                world.
+              </p>
+              <b class="info__text">
+                The owners' parade, previews and entertainment in the paddock
+                for fans are just some of the activities organized as part of
+                the event.
+              </b>
+            </div>
+            <img
+              class="info__part-img"
+              src="images/info-1.jpg"
+              alt="Lambo car racing"
+            />
+          </div>
+          <div class="info__part info__part--second">
+            <div class="info__contetnt">
+              <h3 class="info__tittle">SUPER TROFEO TEAMS</h3>
+              <p class="info__text">
+                All cars that compete in the Lamborghini Super Trofeo
+                championships are driven by private teams who use their
+                experience to fine-tune them for drivers. For each Lamborghini
+                Super Trofeo continental championship, there are driver and team
+                ratings.
+              </p>
+              <p class="info__text">
+                Drivers and teams competing in the Continental Series compete
+                against each other each year in the Lamborghini Grand Final, the
+                event that ends the Super Trofeo sporting season. Two qualifying
+                sessions and two races determine the world champions of the
+                series. Each year the Grand Final is held on a different track
+                and has already covered Europe, Asia and the Americas in past
+                editions.
+              </p>
+            </div>
+            <img
+              class="info__part-img"
+              src="images/info-2.png"
+              alt="car racing in hexagon picture"
+            />
+          </div>
+          <div class="info__part info__part--third">
+            <div class="info__contetnt">
+              <h3 class="info__tittle">
+                Super Trofeo Europe 2023 season calendar
+              </h3>
+              <p class="info__text">
+                14 in the history of the GT series dedicated to the Lamborghini
+                Huracan Super Trofeo Evo. Six stages, a total of 12 races and
+                600 minutes of competition will be played on some of Europe's
+                most prestigious circuits.
+              </p>
+            </div>
+            <table class="info__table">
+              <tr>
+                <td>Stage 1:</td>
+                <td>Imola (Italy)</td>
+                <td>April 1-3</td>
+              </tr>
+              <tr>
+                <td>Stage 2:</td>
+                <td>Le Castellet (France)</td>
+                <td>June 3-5</td>
+              </tr>
+              <tr>
+                <td>Stage 3:</td>
+                <td>Misano (Italy)</td>
+                <td>July 1-3</td>
+              </tr>
+              <tr>
+                <td>Stage 4:</td>
+                <td>Spa-Francorchamps (Belgium)</td>
+                <td>July 29-30</td>
+              </tr>
+              <tr>
+                <td>Stage 5:</td>
+                <td>Barcelona (Spain)</td>
+                <td>September 30–October 2</td>
+              </tr>
+              <tr>
+                <td>Stage 6:</td>
+                <td>Portimao (Portugal)</td>
+                <td>November 3-4</td>
+              </tr>
+              <tr>
+                <td>Grand Final 2022:</td>
+                <td>Portimao (Portugal)</td>
+                <td>November 5-6</td>
+              </tr>
+            </table>
+          </div>
+        </div>
+      </section>
+      <section class="track">
+        <div class="container">
+          <div class="track__inner">
+            <h3 class="track__tittle">TREK PORTIMAO</h3>
+            <p class="track__text">
+              Autodromo Internacional do Algarve is located in the region of the
+              same name in the south of Portugal, near the city of Portimão.
+              Opened in October 2008, the racing complex is one of the most
+              modern in Europe, spread over an area of ​​about 300 hectares in
+              the hills surrounding the Portuguese city, and the length of the
+              track itself is 4684 meters.
+            </p>
+            <img class="track__img" src="images/track.png" alt="" />
           </div>
         </div>
       </section>
