--- a/index.html
+++ b/index.html
@@ -186,6 +186,91 @@
           </div>
         </div>
       </section>
+      <section class="evo">
+        <div class="evo-black">
+          <div class="container">
+            <div class="evo-black__inner">
+              <div class="evo-black__info">
+                <h3 class="evo-black__tittle">SUPER TROPHEO EVO</h3>
+                <div class="evo-black__infobox">
+                  <p class="evo-balck__text">
+                    The new Huracán Super Trofeo EVO achieves even greater
+                    heights than its illustrious predecessor thanks to a
+                    completely redesigned aerodynamics. The Huracán Super Trofeo
+                    EVO is the ideal starting point for all drivers who want to
+                    start their career in GT racing.
+                  </p>
+                  <p class="evo-balck__text">
+                    The Huracán EVO is the evolution of the most successful V10
+                    Lamborghini. As a result of fine-tuning and enhancements to
+                    existing features, combined with new performance-enhancing
+                    designs, the vehicle stands out for its ability to
+                    anticipate and satisfy the driver's behaviour, expectations
+                    and desires.
+                  </p>
+                </div>
+              </div>
+              <img
+                class="evo-black__img"
+                src="images/evo-car.png"
+                alt="Huracán Super Trofeo EVO car"
+              />
+              <dl class="evo__descr-list">
+                <div>
+                  <dd>MOVING</dd>
+                  <dt>5204 cm³</dt>
+                </div>
+                <div>
+                  <dd>TORQUE</dd>
+                  <dt>570 Nm at 6500 rpm</dt>
+                </div>
+                <div>
+                  <dd>POWER (hp) / POWER (KW)</dd>
+                  <dt>620 HP at 8250 rpm</dt>
+                </div>
+                <div>
+                  <dd>MAX. SPEED</dd>
+                  <dt>325 km/h</dt>
+                </div>
+                <div>
+                  <dd>0-100 km/h</dd>
+                  <dt>2.9 s</dt>
+                </div>
+              </dl>
+            </div>
+          </div>
+        </div>
+        <div class="evo-white">
+          <div class="container">
+            <div class="evo-white__inner">
+              <p class="evo-white__text">
+                Its unique design is a natural evolution of the iconic Huracán
+                lines, incorporating sophisticated new solutions that elevate
+                performance and evoke emotions to levels never seen before.
+              </p>
+              <p class="evo-white__text">
+                The unprecedented body kit was developed by Automobili
+                Lamborghini Motorsport engineers in collaboration with Dallara
+                Engineering and Lamborghini Centro Stile. The latter also
+                designed the launch livery for the car in honor of the
+                partnership between Lamborghini Squadra Corse and Roger Dubuis
+                that began in 2018.
+              </p>
+              <p class="evo-white__text">
+                Among the most obvious changes to the Lamborghini Huracan Super
+                Trofeo EVO body kit are a rear hood spoiler and top air intake
+                that make it instantly recognizable to onlookers.
+              </p>
+              <div class="evo-white__video">
+                <a class="evo-white__video-link" href="#">
+                  <img class="evo-white__img" src="images/evo-icon.svg" alt="video play icon">
+                  <span>Watch online</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script src="js/main.js"></script>
