feat: add slide for blog section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Forum&family=Inter:wght@400;700&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,400&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -53,7 +57,7 @@
       <section class="promo">
         <div class="big-container">
           <div class="promo__inner">
-            <h1 class="tittle">LAMBORGHINI SUPER TROFEO</h1>
+            <h1 class="title">LAMBORGHINI SUPER TROFEO</h1>
             <h2 class="subtitle">
               Grand Final 2023
               <span>3-6 november</span>
@@ -68,7 +72,7 @@
       <section class="info">
         <div class="container">
           <div class="info__part info__part--first">
-            <h3 class="info__tittle">SUPER TROPHY WORLD FINAL</h3>
+            <h3 class="info__title">SUPER TROPHY WORLD FINAL</h3>
             <div class="info__part-textbox">
               <p class="info__text">
                 The Lamborghini World Final has concluded every Super Trofeo
@@ -94,7 +98,7 @@
           </div>
           <div class="info__part info__part--second">
             <div class="info__contetnt">
-              <h3 class="info__tittle">SUPER TROFEO TEAMS</h3>
+              <h3 class="info__title">SUPER TROFEO TEAMS</h3>
               <p class="info__text">
                 All cars that compete in the Lamborghini Super Trofeo
                 championships are driven by private teams who use their
@@ -120,7 +124,7 @@
           </div>
           <div class="info__part info__part--third">
             <div class="info__contetnt">
-              <h3 class="info__tittle">
+              <h3 class="info__title">
                 Super Trofeo Europe 2023 season calendar
               </h3>
               <p class="info__text">
@@ -173,7 +177,7 @@
       <section class="track">
         <div class="container">
           <div class="track__inner">
-            <h3 class="track__tittle">TREK PORTIMAO</h3>
+            <h3 class="track__title">TREK PORTIMAO</h3>
             <p class="track__text">
               Autodromo Internacional do Algarve is located in the region of the
               same name in the south of Portugal, near the city of Portimão.
@@ -191,14 +195,16 @@
           <div class="container">
             <div class="evo-black__inner">
               <div class="evo-black__info">
-                <h3 class="evo-black__tittle">SUPER TROPHEO EVO</h3>
+                <h3 class="evo-black__title">SUPER TROPHEO EVO</h3>
                 <div class="evo-black__infobox">
                   <p class="evo-balck__text">
                     The new Huracán Super Trofeo EVO achieves even greater
                     heights than its illustrious predecessor thanks to a
                     completely redesigned aerodynamics. The Huracán Super Trofeo
                     EVO is the ideal starting point for all drivers who want to
-                    start their career in GT racing.
+                    start their career in GT racing. EVO is the ideal starting
+                    point for all drivers who want to start their career in GT
+                    racing.
                   </p>
                   <p class="evo-balck__text">
                     The Huracán EVO is the evolution of the most successful V10
@@ -206,7 +212,9 @@
                     existing features, combined with new performance-enhancing
                     designs, the vehicle stands out for its ability to
                     anticipate and satisfy the driver's behaviour, expectations
-                    and desires.
+                    and desires. designs, the vehicle stands out for its ability
+                    to anticipate and satisfy the driver's behaviour,
+                    expectations and desires.
                   </p>
                 </div>
               </div>
@@ -263,7 +271,11 @@
               </p>
               <div class="evo-white__video">
                 <a class="evo-white__video-link" href="#">
-                  <img class="evo-white__img" src="images/evo-icon.svg" alt="video play icon">
+                  <img
+                    class="evo-white__img"
+                    src="images/evo-icon.svg"
+                    alt="video play icon"
+                  />
                   <span>Watch online</span>
                 </a>
               </div>
@@ -271,8 +283,120 @@
           </div>
         </div>
       </section>
+      <section class="blog">
+        <div class="container">
+          <h3 class="blog__title">BLOG</h3>
+          <div class="blog__slider swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide blog__item">
+                <img
+                  class="blog__item-img"
+                  src="images/blog-1.jpg"
+                  alt="the racer celebrates the victory"
+                />
+                <h4 class="blog__item-title">
+                  NELSON PIQUET BECAME THE WINNER OF THE GRAND FINAL IN PORTIMAO
+                </h4>
+                <p class="blog__item-text">
+                  Ansa Motorsports' Nelson Piquet Jr. ensured the return of the
+                  Lamborghini Super Trofeo Grand Finals title to North America
+                  for the first time since 2017 after winning and finishing
+                  second in a pair of 50-minute races at the Autodromo Nacionale
+                  do Algarve in Portimao. Meanwhile, the Pro-Am title was
+                  undermined , as Brian Ortiz and Sebastian Carazo of Precision
+                  Performance Motorsports became the first all-Puerto Rican team
+                  to win a Grand Final,
+                </p>
+                <a
+                  class="blog__item-link"
+                  href="
+                "
+                  >read more...</a
+                >
+              </div>
+              <div class="swiper-slide blog__item">
+                <img
+                  class="blog__item-img"
+                  src="images/blog-2.jpg"
+                  alt="the racer celebrates the victory"
+                />
+                <h4 class="blog__item-title">GRAND FINAL. DAY 1</h4>
+                <p class="blog__item-text">
+                  Rain in the morning meant that a wet race was called before
+                  the start and most crews had the choice of using slicks or wet
+                  tyres. Most of the participants preferred the wet track, but
+                  pole driver Spinelli started the race on slicks and
+                  immediately paid the price. The No. 61 Huracan slipped down to
+                  just 28th as
+                </p>
+                <a
+                  class="blog__item-link"
+                  href="
+                "
+                  >read more...</a
+                >
+              </div>
+              <div class="swiper-slide blog__item">
+                <img
+                  class="blog__item-img"
+                  src="images/blog-1.jpg"
+                  alt="the racer celebrates the victory"
+                />
+                <h4 class="blog__item-title">
+                  NELSON PIQUET BECAME THE WINNER OF THE GRAND FINAL IN PORTIMAO
+                </h4>
+                <p class="blog__item-text">
+                  Ansa Motorsports' Nelson Piquet Jr. ensured the return of the
+                  Lamborghini Super Trofeo Grand Finals title to North America
+                  for the first time since 2017 after winning and finishing
+                  second in a pair of 50-minute races at the Autodromo Nacionale
+                  do Algarve in Portimao. Meanwhile, the Pro-Am title was
+                  undermined , as Brian Ortiz and Sebastian Carazo of Precision
+                  Performance Motorsports became the first all-Puerto Rican team
+                  to win a Grand Final,
+                </p>
+                <a
+                  class="blog__item-link"
+                  href="
+                "
+                  >read more...</a
+                >
+              </div>
+              <div class="swiper-slide blog__item">
+                <img
+                  class="blog__item-img"
+                  src="images/blog-2.jpg"
+                  alt="the racer celebrates the victory"
+                />
+                <h4 class="blog__item-title">GRAND FINAL. DAY 1</h4>
+                <p class="blog__item-text">
+                  Rain in the morning meant that a wet race was called before
+                  the start and most crews had the choice of using slicks or wet
+                  tyres. Most of the participants preferred the wet track, but
+                  pole driver Spinelli started the race on slicks and
+                  immediately paid the price. The No. 61 Huracan slipped down to
+                  just 28th as
+                </p>
+                <a
+                  class="blog__item-link"
+                  href="
+                "
+                  >read more...</a
+                >
+              </div>
+            </div>
+            <div class="blog__button swiper-button-left">
+              <img src="images/arrow-left.svg" alt="">
+            </div>
+            <div class="blog__button swiper-button-right">
+              <img src="images/arrow-right.svg" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
