feat: add quote to blog section

--- a/index.html
+++ b/index.html
@@ -386,11 +386,41 @@
               </div>
             </div>
             <div class="blog__button swiper-button-left">
-              <img src="images/arrow-left.svg" alt="">
+              <img src="images/arrow-left.svg" alt="" />
             </div>
             <div class="blog__button swiper-button-right">
-              <img src="images/arrow-right.svg" alt="">
+              <img src="images/arrow-right.svg" alt="" />
             </div>
+          </div>
+          <div class="blog__quote">
+            <div class="blog__quote-box">
+              <blockquote class="blockquote">
+                <cite class="blockquote__name">
+                  <span>Champion Am</span>
+                  Andgej Lewandovskiy
+                </cite>
+                <p class="blockquote__text">
+                  “I am very happy with the title, my second Am victory and my
+                  fourth Super Trofeo, I am very pleased to do this this year
+                  because the level of competition is very high. I have to say,
+                  it was pretty easy today as I was in control the whole time.”
+                </p>
+              </blockquote>
+              <blockquote class="blockquote">
+                <cite class="blockquote__name">
+                  <span>Lamborghini Cup Winner</span>
+                  Gerard van der Horst
+                </cite>
+                <p class="blockquote__text">
+                  “I am very happy with the title, my second Am victory and my
+                  fourth Super Trofeo, I am very pleased to do this this year
+                  because the level of competition is very high. Must
+                  Lamborghini Cup winner added: “It’s great to win the title,
+                  four years after the last one, and...
+                </p>
+              </blockquote>
+            </div>
+            <img class="blog_quote-img" src="images/quote.png" alt="" />
           </div>
         </div>
       </section>
