--- a/index.html
+++ b/index.html
@@ -425,7 +425,128 @@
         </div>
       </section>
     </main>
+    <footer class="footer">
+      <div class="container">
+        <h3 class="footer__title">Contacts</h3>
+        <div class="footer__top">
+          <ul class="footer__info">
+            <li class="footer__info-item">
+              <dl>
+                <dt>GENERAL</dt>
+                <dd><a href="tel:+351282405600">+(351) 282 405 600</a></dd>
+                <dd><a href="tel:+351282405697">+(351) 282 405 697</a></dd>
+                <dd>
+                  <a href="mailto:info@autodromodoalgarve.com"
+                    >info@autodromodoalgarve.com
+                  </a>
+                </dd>
+              </dl>
+            </li>
+            <li class="footer__info-item">
+              <dl>
+                <dt>TICKETS</dt>
+                <dd><a href="tel:+351282405600">+(351) 282 405 600</a></dd>
+                <dd>
+                  <a href="mailto:tickets@autodromodoalgarve.com"
+                    >tickets@autodromodoalgarve.com
+                  </a>
+                </dd>
+              </dl>
+            </li>
+            <li class="footer__info-item">
+              <ul class="social-list">
+                <li class="social-list__item">
+                  <a class="social-list__link" href="#">
+                    <img
+                      class="social-list__icon"
+                      src="images/youtube.svg"
+                      alt="youtube icon"
+                    />
+                  </a>
+                </li>
+                <li class="social-list__item">
+                  <a class="social-list__link" href="#">
+                    <img
+                      class="social-list__icon"
+                      src="images/instagram.svg"
+                      alt="instagram icon"
+                    />
+                  </a>
+                </li>
+                <li class="social-list__item">
+                  <a class="social-list__link" href="#">
+                    <img
+                      class="social-list__icon"
+                      src="images/facebook.svg"
+                      alt="facebook icon"
+                    />
+                  </a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+          <div class="footer__address">
+            <p class="footer__address-title">ADDRESS</p>
+            <address class="footer__address-text">
+              Sitio do Escampadinho, Mexilhoeira Grande, 8500-148 Portimao,
+              Portugal
+            </address>
+            <div id="map"></div>
+          </div>
+        </div>
+        <div class="footer__bottom">
+          <a class="footer__bottom-link" href="#"
+            >Design by Varvara Prokopchuk</a
+          >
+          <a class="footer__logo" href="#">
+            <img
+              class="footer__logo-img"
+              src="images/logo-footer.svg"
+              alt="Lambo-logo"
+            />
+          </a>
+          <a class="footer__bottom-link" href="#">Privacy policy</a>
+        </div>
+      </div>
+    </footer>
 
+    <script>
+      ((g) => {
+        var h,
+          a,
+          k,
+          p = "The Google Maps JavaScript API",
+          c = "google",
+          l = "importLibrary",
+          q = "__ib__",
+          m = document,
+          b = window;
+        b = b[c] || (b[c] = {});
+        var d = b.maps || (b.maps = {}),
+          r = new Set(),
+          e = new URLSearchParams(),
+          u = () =>
+            h ||
+            (h = new Promise(async (f, n) => {
+              await (a = m.createElement("script"));
+              e.set("libraries", [...r] + "");
+              for (k in g)
+                e.set(
+                  k.replace(/[A-Z]/g, (t) => "_" + t[0].toLowerCase()),
+                  g[k]
+                );
+              e.set("callback", c + ".maps." + q);
+              a.src = `https://maps.${c}apis.com/maps/api/js?` + e;
+              d[q] = f;
+              a.onerror = () => (h = n(Error(p + " could not load.")));
+              a.nonce = m.querySelector("script[nonce]")?.nonce || "";
+              m.head.append(a);
+            }));
+        d[l]
+          ? console.warn(p + " only loads once. Ignoring:", g)
+          : (d[l] = (f, ...n) => r.add(f) && u().then(() => d[l](f, ...n)));
+      })({ key: "AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg", v: "weekly" });
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
