--- a/index.html
+++ b/index.html
@@ -50,9 +50,39 @@
               <a class="menu-link" href="#">Contacts</a>
             </li>
           </ul>
+          <button class="menu-btn">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+          <ul class="menu-mobile">
+            <li class="menu-item">
+              <a class="menu-link" href="#">Race info</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#">Track</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#">Lamborghini Super trofeo</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#">News</a>
+            </li>
+
+            <li class="menu-item">
+              <a class="menu-link" href="#">Buy tickets</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#">Watch online</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#">Contacts</a>
+            </li>
+          </ul>
         </nav>
       </div>
     </header>
+
     <main class="main">
       <section class="promo">
         <div class="big-container">
@@ -69,6 +99,7 @@
           </div>
         </div>
       </section>
+      <!-- 
       <section class="info">
         <div class="container">
           <div class="info__part info__part--first">
@@ -424,7 +455,8 @@
           </div>
         </div>
       </section>
-    </main>
+    --></main>
+    <!-- 
     <footer class="footer">
       <div class="container">
         <h3 class="footer__title">Contacts</h3>
@@ -509,7 +541,7 @@
         </div>
       </div>
     </footer>
-
+   -->
     <script>
       ((g) => {
         var h,
