feat: add all media queries

--- a/index.html
+++ b/index.html
@@ -99,7 +99,6 @@
           </div>
         </div>
       </section>
-      <!-- 
       <section class="info">
         <div class="container">
           <div class="info__part info__part--first">
@@ -197,7 +196,7 @@
                 <td>November 3-4</td>
               </tr>
               <tr>
-                <td>Grand Final 2022:</td>
+                <td>Grand Final 2023:</td>
                 <td>Portimao (Portugal)</td>
                 <td>November 5-6</td>
               </tr>
@@ -451,12 +450,11 @@
                 </p>
               </blockquote>
             </div>
-            <img class="blog_quote-img" src="images/quote.png" alt="" />
+            <img class="blog__quote-img" src="images/quote.png" alt="" />
           </div>
         </div>
       </section>
-    --></main>
-    <!-- 
+    </main>
     <footer class="footer">
       <div class="container">
         <h3 class="footer__title">Contacts</h3>
@@ -541,7 +539,7 @@
         </div>
       </div>
     </footer>
-   -->
+
     <script>
       ((g) => {
         var h,
